# Hackzilla-TeamFresent

./: README.md  requirements.py  requirements.txt
app/app/: CMakeLists.txt  build.gradle
app/app/src/androidTest/java/com/fresent/fresent/: ExampleInstrumentedTest.java
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: native-lib.cpp
app/app/src/main/java/com/fresent/fresent/: MainActivity.java  MainApplication.java  TestActivity.java
app/app/src/main/java/com/fresent/fresent/ai/: CvContextWrapper.java  FaceDetection.java  FaceRecognition.java  NativeFaceRecognition.java
app/app/src/main/java/com/fresent/fresent/base/: BaseActivity.java  BaseRecyclerViewAdapter.java  BaseViewHolder.java  BindContentView.java  (+1 more)
app/app/src/main/jni/: Android.mk  com_fresent_fresent_ai_NativeFaceRecognition.cpp
app/app/src/main/res/drawable/: ic_camera_enhance_white_24dp.xml  ic_home_pink_400_24dp.xml  ic_photo_library_pink_400_24dp.xml
app/app/src/main/res/drawable/drawable/: ic_date_range_pink_400_24dp.xml  ic_face_pink_400_24dp.xml  ic_settings_pink_400_24dp.xml
app/app/src/main/res/layout/: activity_add_class.xml  activity_fresent.xml  activity_main.xml  activity_test.xml  class_detail_form_view.xml  class_list_item_view.xml  content_main.xml  content_test.xml  main_activity.xml  main_class_list.xml  main_class_list_item.xml  main_content.xml  main_no_classes.xml  student_list_item.xml
app/app/src/main/res/menu/: menu_main.xml
app/app/src/main/res/values/: colors.xml  ids.xml  strings.xml
app/app/src/test/java/com/fresent/fresent/: ExampleUnitTest.java
(+76 files in other folders)
